# pokemon-agg

./: .gitignore  README.md  preview.html  render.yaml
backend/: .env.example  SETUP.md  app.py  config.py  pwcc_agent.py  render.yaml  requirements.txt  seed_data.py  stockx_scraper.py  tcgplayer_analyst.py
backend/routers/: __init__.py  pokemon_cards.py
ios-app/: SETUP.md
ios-app/PokemonCardAgg/: ContentView.swift  Models.swift  NetworkManager.swift  PokemonCardAggApp.swift
stateless_infra/: ARCHITECTURE.md  Dockerfile  README.md  SECURITY.md  render.yaml
stateless_infra/.github/workflows/: deploy.yml
stateless_infra/backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
stateless_infra/backend/app/: main.py
stateless_infra/backend/app/api/v1/: api.py
stateless_infra/backend/app/api/v1/endpoints/: admin.py  affiliate.py  bots.py  ios.py
stateless_infra/backend/app/core/: config.py  limiter.py  middleware.py  scheduler.py  size_limit.py  validators.py
stateless_infra/backend/app/db/: models.py  session.py
stateless_infra/backend/app/services/: affiliate.py  bot.py  cleanup.py  email.py  scheduler.py  storage.py
stateless_infra/backend/migrations/: env.py
stateless_infra/backend/migrations/versions/: 001_initial_migration.py
stateless_infra/backend/tests/: README.md  test_api.py  test_design_fixes.py  test_security.py
web-frontend/: SETUP.md  package-lock.json  package.json  vercel.json
web-frontend/public/: index.html
web-frontend/src/: App.js  PriceComparisonChart.js  index.css  shared-ui.tsx
