[project]
name = "stateless-backend"
version = "0.1.0"
description = "Stateless Multi-tenant Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "boto3>=1.28.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "sendgrid>=6.10.0",
    "alembic>=1.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
